Fix checkbox alignment

--- a/src/components/Movement.css
+++ b/src/components/Movement.css
@@ -2,6 +2,6 @@
     cursor: pointer;
 }
 .movement_icon {
-    vertical-align: sub;
+    vertical-align: middle;
     margin-right: 1em;
 }
