--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -83,7 +83,6 @@ body {
 }
 
 .material-icons {
-  vertical-align: sub;
   font-size: inherit;
 }
 
